<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculate">

    <EditText
        android:id="@+id/txtTotal"
        android:layout_width="209dp"
        android:layout_height="71dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/txtTotalBill"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtGuests"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/txtGuests"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotal" />

    <Spinner
        android:id="@+id/txtServiceQuality"
        android:layout_width="295dp"
        android:layout_height="64dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="16dp"
        android:entries="@array/serviceQuality"
        android:prompt="@string/prompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGuests" />

    <Button
        android:id="@+id/btnSplit"
        android:layout_width="177dp"
        android:layout_height="92dp"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="40dp"
        android:text="@string/btnCalc"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtServiceQuality" />

    <EditText
        android:id="@+id/txtResult"
        android:layout_width="356dp"
        android:layout_height="178dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:ellipsize="none"
        android:ems="10"
        android:hint="@string/txtCalculatedDisplay"
        android:inputType="textMultiLine"
        android:lineSpacingExtra="8sp"
        android:lines="5"
        android:maxLines="10"
        android:minLines="10"
        android:scrollHorizontally="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSplit" />

</androidx.constraintlayout.widget.ConstraintLayout>