<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginLeft="99dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtTitle"
        android:textColor="#8BC34A"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnOpen"
        android:layout_width="117dp"
        android:layout_height="76dp"
        android:layout_marginStart="147dp"
        android:layout_marginLeft="147dp"
        android:text="@string/btnOpen"
        android:textColor="#4CAF50"
        android:textColorHighlight="#8BC34A"
        android:textColorHint="@android:color/holo_blue_bright"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="353dp"
        android:layout_height="473dp"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:contentDescription="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:srcCompat="@drawable/tips" />

</androidx.constraintlayout.widget.ConstraintLayout>